k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-example-app
  labels:
    app: ci-cd-example-app
spec:
  type: ClusterIP
  selector:
    app: ci-cd-example-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
